<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.auth.SignInFragment"
    android:background="@color/white_new">

    <TextView
        android:id="@+id/arrow_main"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/baseline_arrow_back"
        android:layout_marginTop="78dp"
        android:layout_marginLeft="16dp"
        />
    <ImageView
        android:layout_width="46dp"
        android:layout_height="67dp"
        android:src="@drawable/logo_small"
        android:layout_gravity="center|top"
        android:layout_marginTop="72dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:layout_marginTop="209dp"
        android:layout_marginLeft="16dp"
        android:theme="@style/text_24"
        />
    <EditText
        android:id="@+id/et_login_main"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:hint="@string/email"
        android:layout_gravity="center|top"
        android:layout_marginTop="253dp"
        android:drawableLeft="@drawable/login_vector"
        android:paddingLeft="16dp"
        android:textSize="14sp"
        style="@style/et_white_and_black"
        />
    <EditText
        android:id="@+id/et_password_main"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:drawableLeft="@drawable/lock_vector"
        android:paddingLeft="16dp"
        android:layout_marginTop="309dp"
        android:layout_gravity="center|top"
        android:textSize="14sp"
        style="@style/et_white_and_black"
        android:drawableRight="@drawable/eye_vector"
        android:paddingRight="16dp"
        />
    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password"
        android:layout_gravity="right"
        android:layout_marginTop="373dp"
        android:layout_marginRight="16dp"
        android:theme="@style/text_14"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_enter_main"
        android:layout_width="328dp"
        android:layout_height="58dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="413dp"
        android:text="@string/enter2"
        style="@style/btn_black_and_yellow"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        style="@style/text_16_regular"
        android:layout_gravity="center|top"
        android:layout_marginTop="493dp"
        />
    <TextView
        android:id="@+id/tv_register_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account_register_it"
        android:layout_gravity="center|top"
        android:layout_marginTop="544dp"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16sp"
        android:textColor="@color/black_new"
        />
</FrameLayout>