<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.PasswordForgetFragment"
    android:background="@color/white_new">
    <TextView
        android:id="@+id/arrow_email"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/baseline_arrow_back"
        android:layout_marginTop="83dp"
        android:layout_marginLeft="21dp"
        />
    <ImageView
        android:layout_width="46dp"
        android:layout_height="67dp"
        android:src="@drawable/logo_small"
        android:layout_gravity="center|top"
        android:layout_marginTop="72dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recover_email"
        android:textSize="24sp"
        android:fontFamily="@font/sf_regular"
        android:layout_marginTop="179dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/black_new"
        />
    <EditText
        android:id="@+id/et_email_email_verification"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:hint="@string/email"
        android:drawableLeft="@drawable/email_vector"
        android:paddingLeft="16dp"
        android:layout_marginTop="231dp"
        android:layout_gravity="center|top"
        style="@style/et_white_and_black"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm_email_verification"
        android:layout_width="328dp"
        android:layout_height="58dp"
        app:cornerRadius="10dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="311dp"
        android:text="@string/confirm"
        style="@style/btn_white_and_black"
        />

</FrameLayout>